--- a/experiment/RL_pipeline.ipynb
+++ b/experiment/RL_pipeline.ipynb
@@ -384,8 +384,8 @@
     "        count = 0\n",
     "        end = False\n",
     "        g = init_graph\n",
-    "        dgl_g = g.to_dgl_graph()\n",
     "        while(count < 10 and not end):\n",
+    "            dgl_g = g.to_dgl_graph()\n",
     "            count += 1 \n",
     "            node, A = agent.select_a(dgl_g, epsilon)\n",
     "            print(A)\n",
@@ -397,7 +397,7 @@
     "            \n",
     "            else:\n",
     "                dgl_new_g = new_g.to_dgl_graph()\n",
-    "                reward = new_g.num_gates() - g.num_gates()\n",
+    "                reward = g.num_gates() - new_g.num_gates()\n",
     "                                         \n",
     "                data.add_data([dgl_g, torch.tensor(node), torch.tensor(A), torch.tensor(reward), dgl_new_g])\n",
     "            \n",
