--- a/experiment/RL_pipeline.ipynb
+++ b/experiment/RL_pipeline.ipynb
@@ -10,7 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using backend: pytorch\n"
+      "Using backend: pytorch[08:53:53] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: \n",
+      "/home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
      ]
     }
    ],
@@ -18,20 +19,19 @@
     "import quartz\n",
     "quartz_context = quartz.QuartzContext(gate_set=['h', 'cx', 'x', 't', 'tdg'], filename='../bfs_verified_simplified.json')\n",
     "parser = quartz.PyQASMParser(context=quartz_context)\n",
-    "my_dag = parser.load_qasm(filename=\"../circuit/example-circuits/barenco_tof_3.qasm\")\n",
-    "my_dag.num_qubits, my_dag.num_gates\n",
+    "my_dag = parser.load_qasm(filename=\"../circuit/nam-circuits/qasm_files/tof_4_before.qasm\")\n",
     "init_graph = quartz.PyGraph(context=quartz_context, dag=my_dag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "15f25615",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "gate_type_num = 20\n",
+    "gate_type_num = 26\n",
     "class QAgent:\n",
     "    def __init__(self, lr, a_size):\n",
     "        torch.manual_seed(42)\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "id": "f168484c",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,150 @@
     "        h = F.relu(h)\n",
     "        h = self.conv5(g, h)\n",
     "        return h\n",
-    "\n"
+    "\n",
+    "\n",
+    "def train_supervised(g, model, lr=0.01, epochs=20):\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "    all_logits = []\n",
+    "    best_val_acc = 0\n",
+    "    best_test_acc = 0\n",
+    "\n",
+    "    features = g.ndata['gate_type']\n",
+    "\n",
+    "    labels = g.ndata['label']\n",
+    "    train_mask = g.ndata['train_mask']\n",
+    "    val_mask = g.ndata['val_mask']\n",
+    "    test_mask = g.ndata['test_mask']\n",
+    "    for e in range(epochs):\n",
+    "        # Forward\n",
+    "        logits = model(g)\n",
+    "\n",
+    "        # Compute loss\n",
+    "        # Note that we should only compute the losses of the nodes in the training set,\n",
+    "        # i.e. with train_mask 1.\n",
+    "        #print(logits)\n",
+    "        \n",
+    "        loss = torch.nn.MSELoss()(logits[train_mask], labels[train_mask])\n",
+    "        pred = logits > 0.5\n",
+    "\n",
+    "        # Compute accuracy on training/validation/test\n",
+    "        train_acc = (pred[train_mask] == labels[train_mask]).float().mean()\n",
+    "        val_acc = (pred[val_mask] == labels[val_mask]).float().mean()\n",
+    "        test_acc = (pred[test_mask] == labels[test_mask]).float().mean()\n",
+    "\n",
+    "        # Save the best validation accuracy and the corresponding test accuracy.\n",
+    "        if best_val_acc < val_acc:\n",
+    "            best_val_acc = val_acc\n",
+    "            best_test_acc = test_acc\n",
+    "\n",
+    "        # Backward\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        all_logits.append(logits.detach())\n",
+    "\n",
+    "        # TODO: print out false negative\n",
+    "        if e % 1 == 0:\n",
+    "            print('In epoch {}, loss: {:.3f}, train acc: {:.3f}, val acc: {:.3f} (best {:.3f}), test acc: {:.3f} (best {:.3f})'.format(\n",
+    "                e, loss, train_acc, val_acc, best_val_acc, test_acc, best_test_acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "819ecf8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pretraining using tof_3 circuit\n",
+    "# Preparaing data\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "\n",
+    "def get_dataset(i):\n",
+    "    dag_i = parser.load_qasm(filename=\"tof_3_opt_path/subst_history_\" + str(i) + \".qasm\")\n",
+    "    graph = quartz.PyGraph(context=quartz_context, dag=dag_i)\n",
+    "    dgl_graph = graph.to_dgl_graph()\n",
+    "    appliable_xfer_matrix = graph.get_available_xfers_matrix(context=quartz_context)\n",
+    "    dgl_graph.ndata['label'] = torch.tensor(appliable_xfer_matrix,dtype=torch.float)\n",
+    "    return dgl_graph\n",
+    "\n",
+    "idx_list = list(range(40))\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    results = executor.map(get_dataset, idx_list)\n",
+    "\n",
+    "opt_path_dgls = [r for r in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2b091986",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In epoch 0, loss: 0.157, train acc: 0.900, val acc: 0.901 (best 0.901), test acc: 0.899 (best 0.899)\n",
+      "In epoch 1, loss: 13.916, train acc: 0.511, val acc: 0.511 (best 0.901), test acc: 0.511 (best 0.899)\n",
+      "In epoch 2, loss: 0.109, train acc: 0.936, val acc: 0.936 (best 0.936), test acc: 0.937 (best 0.937)\n",
+      "In epoch 3, loss: 0.084, train acc: 0.972, val acc: 0.972 (best 0.972), test acc: 0.972 (best 0.972)\n",
+      "In epoch 4, loss: 0.064, train acc: 0.993, val acc: 0.991 (best 0.991), test acc: 0.994 (best 0.994)\n",
+      "In epoch 5, loss: 0.120, train acc: 0.906, val acc: 0.894 (best 0.991), test acc: 0.903 (best 0.994)\n",
+      "In epoch 6, loss: 0.127, train acc: 0.895, val acc: 0.883 (best 0.991), test acc: 0.891 (best 0.994)\n",
+      "In epoch 7, loss: 0.098, train acc: 0.936, val acc: 0.930 (best 0.991), test acc: 0.937 (best 0.994)\n",
+      "In epoch 8, loss: 0.051, train acc: 0.993, val acc: 0.994 (best 0.994), test acc: 0.994 (best 0.994)\n",
+      "In epoch 9, loss: 0.041, train acc: 0.990, val acc: 0.989 (best 0.994), test acc: 0.986 (best 0.994)\n",
+      "In epoch 10, loss: 0.040, train acc: 0.995, val acc: 0.995 (best 0.995), test acc: 0.993 (best 0.993)\n",
+      "In epoch 11, loss: 0.033, train acc: 0.998, val acc: 0.998 (best 0.998), test acc: 0.998 (best 0.998)\n",
+      "In epoch 12, loss: 0.017, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 13, loss: 0.018, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 14, loss: 0.012, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 15, loss: 0.014, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 16, loss: 0.017, train acc: 0.998, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 17, loss: 0.016, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 18, loss: 0.012, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
+      "In epoch 19, loss: 0.011, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import sample\n",
+    "bg = dgl.batch(opt_path_dgls)\n",
+    "node_cnt = bg.num_nodes()\n",
+    "l = list(range(node_cnt))\n",
+    "train_rate = 0.7\n",
+    "val_rate = 0.15\n",
+    "\n",
+    "train_num = int(node_cnt * train_rate)\n",
+    "val_num = int(node_cnt * val_rate)\n",
+    "test_num = node_cnt - train_num - val_num\n",
+    "\n",
+    "train_sample = sample(l, train_num)\n",
+    "node_left = [n for n in l if n not in train_sample]\n",
+    "val_sample = sample(node_left, val_num)\n",
+    "test_sample = [n for n in node_left if n not in val_sample]\n",
+    "\n",
+    "train_mask = [0] * node_cnt\n",
+    "val_mask = [0] * node_cnt\n",
+    "test_mask = [0] * node_cnt\n",
+    "\n",
+    "for i in range(node_cnt):\n",
+    "    if i in train_sample:\n",
+    "        train_mask[i] = 1\n",
+    "    elif i in val_sample:\n",
+    "        val_mask[i] = 1\n",
+    "    elif i in test_sample:\n",
+    "        test_mask[i] = 1\n",
+    "    else:\n",
+    "        assert False\n",
+    "\n",
+    "bg.ndata['train_mask'] = torch.tensor(train_mask,dtype=torch.bool) \n",
+    "bg.ndata['val_mask'] = torch.tensor(val_mask,dtype=torch.bool) \n",
+    "bg.ndata['test_mask'] = torch.tensor(test_mask,dtype=torch.bool) \n",
+    "\n",
+    "model = QGNN(26, 16, quartz_context.num_xfers, 16)\n",
+    "train_supervised(bg, model, lr=0.1, epochs=20)"
    ]
   },
   {
