Added recall in GNN training

--- a/experiment/RL_pipeline.ipynb
+++ b/experiment/RL_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e5f06b5e",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using backend: pytorch[08:53:53] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: \n",
-      "/home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
+      "Using backend: pytorch[00:47:54] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n",
+      "\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "f168484c",
    "metadata": {},
    "outputs": [],
@@ -179,8 +179,42 @@
     "        h = F.relu(h)\n",
     "        h = self.conv5(g, h)\n",
     "        return h\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "819ecf8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pretraining using tof_3 circuit\n",
+    "# Preparaing data\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
+    "def get_dataset(i):\n",
+    "    dag_i = parser.load_qasm(filename=\"tof_3_opt_path/subst_history_\" + str(i) + \".qasm\")\n",
+    "    graph = quartz.PyGraph(context=quartz_context, dag=dag_i)\n",
+    "    dgl_graph = graph.to_dgl_graph()\n",
+    "    appliable_xfer_matrix = graph.get_available_xfers_matrix(context=quartz_context)\n",
+    "    dgl_graph.ndata['label'] = torch.tensor(appliable_xfer_matrix,dtype=torch.float)\n",
+    "    return dgl_graph\n",
     "\n",
+    "idx_list = list(range(40))\n",
+    "with ProcessPoolExecutor(max_workers=32) as executor:\n",
+    "    results = executor.map(get_dataset, idx_list)\n",
+    "\n",
+    "opt_path_dgls = [r for r in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1c6a7e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train_supervised(g, model, lr=0.01, epochs=20):\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "    all_logits = []\n",
@@ -210,6 +244,10 @@
     "        val_acc = (pred[val_mask] == labels[val_mask]).float().mean()\n",
     "        test_acc = (pred[test_mask] == labels[test_mask]).float().mean()\n",
     "\n",
+    "        train_recall = torch.sum((torch.logical_and((pred[train_mask] == 1), (labels[train_mask] == 1))).float()) / torch.sum((labels[train_mask] == 1).float())\n",
+    "        val_recall = torch.sum((torch.logical_and((pred[val_mask] == 1), (labels[val_mask] == 1))).float()) / torch.sum((labels[val_mask] == 1).float())\n",
+    "        test_recall = torch.sum((torch.logical_and((pred[test_mask] == 1), (labels[test_mask] == 1))).float()) / torch.sum((labels[test_mask] == 1).float())\n",
+    "\n",
     "        # Save the best validation accuracy and the corresponding test accuracy.\n",
     "        if best_val_acc < val_acc:\n",
     "            best_val_acc = val_acc\n",
@@ -223,39 +261,27 @@
     "\n",
     "        # TODO: print out false negative\n",
     "        if e % 1 == 0:\n",
-    "            print('In epoch {}, loss: {:.3f}, train acc: {:.3f}, val acc: {:.3f} (best {:.3f}), test acc: {:.3f} (best {:.3f})'.format(\n",
-    "                e, loss, train_acc, val_acc, best_val_acc, test_acc, best_test_acc))"
+    "            print('In epoch {}, loss: {:.5f}, train acc: {:.5f}, train recall: {:.5f}, val acc: {:.5f} (best {:.5f}), val recall: {:.5f}, test acc: {:.5f} (best {:.5f}), test recall: {:.5f}'.format(\n",
+    "                e, loss, train_acc, train_recall, val_acc, best_val_acc,val_recall, test_acc, best_test_acc, test_recall))\n",
+    "\n",
+    "def test(*, filename):\n",
+    "    test_dag = parser.load_qasm(filename=filename)\n",
+    "    test_graph = quartz.PyGraph(context=quartz_context, dag=test_dag)\n",
+    "    test_graph_dgl = test_graph.to_dgl_graph()\n",
+    "    appliable_xfer_matrix = test_graph.get_available_xfers_matrix(context=quartz_context)\n",
+    "    test_graph_dgl.ndata['label'] = torch.tensor(appliable_xfer_matrix,dtype=torch.float)\n",
+    "    labels = test_graph_dgl.ndata['label']\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(test_graph_dgl)\n",
+    "        pred = logits > 0.5\n",
+    "        test_acc = (pred == labels).float().mean()\n",
+    "        print(f\"test_acc: {test_acc:.6f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "819ecf8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pretraining using tof_3 circuit\n",
-    "# Preparaing data\n",
-    "from concurrent.futures import ProcessPoolExecutor\n",
-    "\n",
-    "def get_dataset(i):\n",
-    "    dag_i = parser.load_qasm(filename=\"tof_3_opt_path/subst_history_\" + str(i) + \".qasm\")\n",
-    "    graph = quartz.PyGraph(context=quartz_context, dag=dag_i)\n",
-    "    dgl_graph = graph.to_dgl_graph()\n",
-    "    appliable_xfer_matrix = graph.get_available_xfers_matrix(context=quartz_context)\n",
-    "    dgl_graph.ndata['label'] = torch.tensor(appliable_xfer_matrix,dtype=torch.float)\n",
-    "    return dgl_graph\n",
-    "\n",
-    "idx_list = list(range(40))\n",
-    "with ProcessPoolExecutor() as executor:\n",
-    "    results = executor.map(get_dataset, idx_list)\n",
-    "\n",
-    "opt_path_dgls = [r for r in results]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "2b091986",
    "metadata": {},
    "outputs": [
@@ -263,26 +289,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In epoch 0, loss: 0.157, train acc: 0.900, val acc: 0.901 (best 0.901), test acc: 0.899 (best 0.899)\n",
-      "In epoch 1, loss: 13.916, train acc: 0.511, val acc: 0.511 (best 0.901), test acc: 0.511 (best 0.899)\n",
-      "In epoch 2, loss: 0.109, train acc: 0.936, val acc: 0.936 (best 0.936), test acc: 0.937 (best 0.937)\n",
-      "In epoch 3, loss: 0.084, train acc: 0.972, val acc: 0.972 (best 0.972), test acc: 0.972 (best 0.972)\n",
-      "In epoch 4, loss: 0.064, train acc: 0.993, val acc: 0.991 (best 0.991), test acc: 0.994 (best 0.994)\n",
-      "In epoch 5, loss: 0.120, train acc: 0.906, val acc: 0.894 (best 0.991), test acc: 0.903 (best 0.994)\n",
-      "In epoch 6, loss: 0.127, train acc: 0.895, val acc: 0.883 (best 0.991), test acc: 0.891 (best 0.994)\n",
-      "In epoch 7, loss: 0.098, train acc: 0.936, val acc: 0.930 (best 0.991), test acc: 0.937 (best 0.994)\n",
-      "In epoch 8, loss: 0.051, train acc: 0.993, val acc: 0.994 (best 0.994), test acc: 0.994 (best 0.994)\n",
-      "In epoch 9, loss: 0.041, train acc: 0.990, val acc: 0.989 (best 0.994), test acc: 0.986 (best 0.994)\n",
-      "In epoch 10, loss: 0.040, train acc: 0.995, val acc: 0.995 (best 0.995), test acc: 0.993 (best 0.993)\n",
-      "In epoch 11, loss: 0.033, train acc: 0.998, val acc: 0.998 (best 0.998), test acc: 0.998 (best 0.998)\n",
-      "In epoch 12, loss: 0.017, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 13, loss: 0.018, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 14, loss: 0.012, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 15, loss: 0.014, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 16, loss: 0.017, train acc: 0.998, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 17, loss: 0.016, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 18, loss: 0.012, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n",
-      "In epoch 19, loss: 0.011, train acc: 0.999, val acc: 0.999 (best 0.999), test acc: 0.999 (best 0.999)\n"
+      "In epoch 0, loss: 0.08711, train acc: 0.95660, train recall: 0.02133, val acc: 0.95812 (best 0.95812), val recall: 0.01309, test acc: 0.95799 (best 0.95799), test recall: 0.01314\n",
+      "In epoch 1, loss: 0.04278, train acc: 0.99810, train recall: 0.00690, val acc: 0.99806 (best 0.99806), val recall: 0.00773, test acc: 0.99824 (best 0.99824), test recall: 0.00751\n",
+      "In epoch 2, loss: 0.03640, train acc: 0.99845, train recall: 0.08594, val acc: 0.99848 (best 0.99848), val recall: 0.09518, test acc: 0.99855 (best 0.99855), test recall: 0.10701\n",
+      "In epoch 3, loss: 0.00817, train acc: 0.99848, train recall: 0.00000, val acc: 0.99850 (best 0.99850), val recall: 0.00000, test acc: 0.99858 (best 0.99858), test recall: 0.00000\n",
+      "In epoch 4, loss: 0.00578, train acc: 0.99850, train recall: 0.01117, val acc: 0.99852 (best 0.99852), val recall: 0.01428, test acc: 0.99861 (best 0.99861), test recall: 0.01564\n",
+      "In epoch 5, loss: 0.00406, train acc: 0.99860, train recall: 0.07615, val acc: 0.99863 (best 0.99863), val recall: 0.08626, test acc: 0.99872 (best 0.99872), test recall: 0.09324\n",
+      "In epoch 6, loss: 0.00853, train acc: 0.99854, train recall: 0.04240, val acc: 0.99857 (best 0.99863), val recall: 0.05354, test acc: 0.99866 (best 0.99872), test recall: 0.05444\n",
+      "In epoch 7, loss: 0.00452, train acc: 0.99878, train recall: 0.22017, val acc: 0.99881 (best 0.99881), val recall: 0.23795, test acc: 0.99894 (best 0.99894), test recall: 0.27409\n",
+      "In epoch 8, loss: 0.00895, train acc: 0.99856, train recall: 0.23485, val acc: 0.99859 (best 0.99881), val recall: 0.25461, test acc: 0.99873 (best 0.99894), test recall: 0.29161\n",
+      "In epoch 9, loss: 0.00378, train acc: 0.99877, train recall: 0.23146, val acc: 0.99880 (best 0.99881), val recall: 0.25223, test acc: 0.99893 (best 0.99894), test recall: 0.28911\n",
+      "In epoch 10, loss: 0.00302, train acc: 0.99882, train recall: 0.26371, val acc: 0.99885 (best 0.99885), val recall: 0.28079, test acc: 0.99898 (best 0.99898), test recall: 0.32478\n",
+      "In epoch 11, loss: 0.00240, train acc: 0.99882, train recall: 0.26346, val acc: 0.99885 (best 0.99885), val recall: 0.28079, test acc: 0.99897 (best 0.99898), test recall: 0.32416\n",
+      "In epoch 12, loss: 0.00201, train acc: 0.99882, train recall: 0.26320, val acc: 0.99885 (best 0.99885), val recall: 0.27960, test acc: 0.99897 (best 0.99898), test recall: 0.32416\n",
+      "In epoch 13, loss: 0.00186, train acc: 0.99882, train recall: 0.26320, val acc: 0.99885 (best 0.99885), val recall: 0.27960, test acc: 0.99897 (best 0.99898), test recall: 0.32416\n",
+      "In epoch 14, loss: 0.00189, train acc: 0.99882, train recall: 0.26320, val acc: 0.99885 (best 0.99885), val recall: 0.27960, test acc: 0.99897 (best 0.99898), test recall: 0.32416\n",
+      "In epoch 15, loss: 0.00194, train acc: 0.99878, train recall: 0.22431, val acc: 0.99881 (best 0.99885), val recall: 0.24509, test acc: 0.99893 (best 0.99898), test recall: 0.27534\n",
+      "In epoch 16, loss: 0.00194, train acc: 0.99878, train recall: 0.22243, val acc: 0.99881 (best 0.99885), val recall: 0.24390, test acc: 0.99893 (best 0.99898), test recall: 0.27472\n",
+      "In epoch 17, loss: 0.00189, train acc: 0.99879, train recall: 0.22231, val acc: 0.99883 (best 0.99885), val recall: 0.24390, test acc: 0.99894 (best 0.99898), test recall: 0.27472\n",
+      "In epoch 18, loss: 0.00181, train acc: 0.99879, train recall: 0.22218, val acc: 0.99883 (best 0.99885), val recall: 0.24390, test acc: 0.99894 (best 0.99898), test recall: 0.27472\n",
+      "In epoch 19, loss: 0.00172, train acc: 0.99875, train recall: 0.18969, val acc: 0.99879 (best 0.99885), val recall: 0.21356, test acc: 0.99890 (best 0.99898), test recall: 0.23342\n"
      ]
     }
    ],
@@ -322,7 +348,7 @@
     "bg.ndata['test_mask'] = torch.tensor(test_mask,dtype=torch.bool) \n",
     "\n",
     "model = QGNN(26, 16, quartz_context.num_xfers, 16)\n",
-    "train_supervised(bg, model, lr=0.1, epochs=20)"
+    "train_supervised(bg, model, lr=0.05, epochs=20)"
    ]
   },
   {
@@ -531,7 +557,7 @@
     "            dgl_g = g.to_dgl_graph()\n",
     "            count += 1 \n",
     "            node, A = agent.select_a(dgl_g, epsilon)\n",
-    "            print(A)\n",
+    "            # print(A)\n",
     "            new_g = g.apply_xfer(xfer=quartz_context.get_xfer_from_id(id=A), node = g.all_nodes()[node])\n",
     "            \n",
     "            if new_g == None:\n",
