Added some experiments

--- a/experiment/test_quartz.ipynb
+++ b/experiment/test_quartz.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using backend: pytorch[06:39:29] /opt/dgl/src/runtime/tensordispatch.cc:\n",
-      "43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
+      "Using backend: pytorch[21:06:36] /opt/dgl/src/runtime/tensordispatch.cc:43\n",
+      ": TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
      ]
     }
    ],
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "(5, 58)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,6 +1943,93 @@
     "                if budget % 10_000 == 0:\n",
     "                    print(f'{budget}: minimum gate count is {best_gate_cnt}, correctness: {check(best_graph)}')\n",
     "                    print(f'Best graph trace: {best_graph_trace}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "990000: minimum gate count is 58, correctness: True\n",
+      "980000: minimum gate count is 58, correctness: True\n",
+      "970000: minimum gate count is 58, correctness: True\n",
+      "960000: minimum gate count is 56, correctness: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collecting data\n",
+    "import heapq\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "import copy\n",
+    "import random\n",
+    "\n",
+    "candidate_hq = []\n",
+    "heapq.heappush(candidate_hq, my_graph)\n",
+    "hash_set = set()\n",
+    "hash_set.add(my_graph.hash())\n",
+    "best_graph = my_graph\n",
+    "best_gate_cnt = my_graph.gate_count\n",
+    "budget = 1_000_000\n",
+    "collected_graphs = []\n",
+    "\n",
+    "\n",
+    "while candidate_hq != [] and budget >= 0:\n",
+    "    first_candidate = heapq.heappop(candidate_hq)\n",
+    "    all_nodes = first_candidate.all_nodes()\n",
+    "    \n",
+    "    def ax(i):\n",
+    "        node = all_nodes[i]\n",
+    "        return first_candidate.available_xfers(context=quartz_context, node=node)\n",
+    "    \n",
+    "    with ProcessPoolExecutor(max_workers=24) as executor:\n",
+    "        results = executor.map(ax, list(range(len(all_nodes))))\n",
+    "        appliable_xfers_nodes = []\n",
+    "        for r in results:\n",
+    "            appliable_xfers_nodes.append(r)\n",
+    "        \n",
+    "    for i in range(len(all_nodes)):\n",
+    "        node = all_nodes[i]\n",
+    "        appliable_xfers = appliable_xfers_nodes[i]\n",
+    "        for xfer in appliable_xfers:\n",
+    "            new_graph = first_candidate.apply_xfer(xfer=quartz_context.get_xfer_from_id(id=xfer), node=node)\n",
+    "            if new_graph.hash() not in hash_set:\n",
+    "                hash_set.add(new_graph.hash())\n",
+    "                heapq.heappush(candidate_hq, new_graph)\n",
+    "                if random.random() < 0.05:\n",
+    "                    collected_graphs.append(new_graph)\n",
+    "                    if len(collected_graphs) >= 2000:\n",
+    "                        break\n",
+    "                if new_graph < best_graph:\n",
+    "                    best_graph = new_graph\n",
+    "                    best_gate_cnt = new_graph.gate_count\n",
+    "                budget -= 1\n",
+    "                if budget % 10_000 == 0:\n",
+    "                    print(f'{budget}: minimum gate count is {best_gate_cnt}, correctness: {check(best_graph)}')\n",
+    "    if len(collected_graphs) >= 2000:\n",
+    "        collected_graphs = collected_graphs[:2000]\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_to_qasm(i):\n",
+    "    collected_graphs[i].to_qasm(filename=f'barenco_graphs/barenco_tof_3_{i}.qasm')\n",
+    "    return True\n",
+    "\n",
+    "with ProcessPoolExecutor(max_workers=24) as executor:\n",
+    "    results = executor.map(save_to_qasm, list(range(2000)), chunksize=64)\n",
+    "\n",
+    "for r in results:\n",
+    "    pass"
    ]
   },
   {
