Use this file to test xfer_appliable() and apply_xfer

--- a/experiment/back_tracking_search.ipynb
+++ b/experiment/back_tracking_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using backend: pytorch\n",
-      "[06:20:30] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
+      "[17:26:02] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "      edata_schemes={'reversed': Scheme(shape=(), dtype=torch.int64), 'src_idx': Scheme(shape=(), dtype=torch.int64), 'dst_idx': Scheme(shape=(), dtype=torch.int64)})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,91 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3259, 3355]\n",
+      "[3337, 3461]\n",
+      "[3321, 3345, 3385]\n",
+      "[1725, 3337, 3461]\n",
+      "[3363]\n",
+      "[3337, 3461]\n",
+      "[368, 1351, 2098, 3321, 3345, 3385]\n",
+      "[398, 440, 441, 442, 444, 1091, 1172, 1231, 1232, 1233, 1235, 1471, 1472, 1473, 1475, 3337, 3461]\n",
+      "[3337, 3461]\n",
+      "[3363, 3583]\n",
+      "[3321, 3345, 3385]\n",
+      "[3224, 3337, 3360, 3461]\n",
+      "[3223, 3359]\n",
+      "[3241]\n",
+      "[3259, 3355]\n",
+      "[3337, 3461]\n",
+      "[3321, 3345, 3385]\n",
+      "[1725, 3337, 3461]\n",
+      "[3363]\n",
+      "[3337, 3461]\n",
+      "[368, 1351, 2098, 3321, 3345, 3385]\n",
+      "[398, 440, 441, 442, 444, 1091, 1172, 1231, 1232, 1233, 1235, 1471, 1472, 1473, 1475, 3337, 3461]\n",
+      "[3337, 3461]\n",
+      "[]\n",
+      "[2613, 3321, 3345, 3385]\n",
+      "[3291, 3383]\n",
+      "[1205, 1477, 1817, 2105, 3224, 3337, 3360, 3461]\n",
+      "[1725, 3337, 3461]\n",
+      "[3223, 3359]\n",
+      "[3223, 3359]\n",
+      "[3363]\n",
+      "[3337, 3461]\n",
+      "[3321, 3345, 3385]\n",
+      "[1725, 3337, 3461]\n",
+      "[1241, 3363]\n",
+      "[440, 441, 442, 444, 1231, 1232, 1233, 1235, 1281, 1471, 1472, 1473, 1475, 1815, 2595, 3337, 3461]\n",
+      "[3337, 3461]\n",
+      "[]\n",
+      "[3363, 3511]\n",
+      "[]\n",
+      "[3155, 3309, 3337, 3461]\n",
+      "[]\n",
+      "[3131]\n",
+      "[3259, 3355]\n",
+      "[1725, 3337, 3461]\n",
+      "[3363]\n",
+      "[3337, 3461]\n",
+      "[3321, 3345, 3385]\n",
+      "[1725, 3337, 3461]\n",
+      "[1241, 3363]\n",
+      "[440, 441, 442, 444, 1231, 1232, 1233, 1235, 1281, 1471, 1472, 1473, 1475, 1815, 2595, 3337, 3461]\n",
+      "[3337, 3461]\n",
+      "[]\n",
+      "[3363, 3511]\n",
+      "[]\n",
+      "[3155, 3309, 3337, 3461]\n",
+      "[]\n",
+      "[]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "187"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# available_xfer_matrix = init_graph.get_available_xfers_matrix(context=quartz_context)\n",
-    "# all_nodes = init_graph.all_nodes()\n",
-    "# for node in all_nodes:\n",
-    "#     print(init_graph.available_xfers(context=quartz_context, node=node))"
+    "all_nodes = init_graph.all_nodes()\n",
+    "cnt = 0\n",
+    "for node in all_nodes:\n",
+    "    l = init_graph.available_xfers(context=quartz_context, node=node)\n",
+    "    print(l)\n",
+    "    cnt += len(l)\n",
+    "cnt"
    ]
   },
   {
