--- a/experiment/back_tracking_search.ipynb
+++ b/experiment/back_tracking_search.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using backend: pytorch\n",
-      "[17:26:02] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A warning message from DGL will appear which seems to be related to an open issue in the DGL library, \n",
     "# it won't hurt the execution of the program, please ignore it.\n",
@@ -30,6 +21,16 @@
     "parser = quartz.PyQASMParser(context=quartz_context)\n",
     "my_dag = parser.load_qasm(filename=\"barenco_tof_3_opt_path/subst_history_39.qasm\")\n",
     "init_graph = quartz.PyGraph(context=quartz_context, dag=my_dag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_graph = init_graph.apply_xfer(xfer=quartz_context.get_xfer_from_id(id=993), node=init_graph.get_node_from_id(id=42))\n",
+    "new_graph"
    ]
   },
   {
@@ -268,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
